# grpc-proxier

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  credentials.example  flake.nix  justfile
.vardrun/: config.yaml  issues.jsonl
docs/: grafana-dashboard.json
examples/: hash_password.rs
nix/: module.nix  monitoring.nix
src/: auth.rs  config.rs  error.rs  main.rs  metrics.rs  proxy.rs
